contents/docs/v2.3.6/getting-started/introduction/index.mdx
---
title: Introduction
description: This section provides an overview of Introduction.
---

Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iste dolorum tempore consectetur explicabo tempora provident quia maxime, molestiae, facilis aperiam et, error illum vel ullam? Quis architecto dolore ullam

## Getting Started

To begin using the Documentation Template, follow these simple steps:

- Start by cloning the repository to your local machine.

Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quae iure nulla deserunt dolore quam pariatur minus sapiente accusantium. Optio, necessitatibus sequi. Veritatis, aspernatur? Possimus quis repellat eum vitae eveniet.

## Blockquotes

Blockquotes are useful for emphasizing key points or quoting external sources:

> "Documentation is a love letter that you write to your future self." - Damian Conway

Feel free to use blockquotes to highlight important information or quotes relevant to your documentation.

## Code Examples with switch

Here a custom tab component from shadcn ui is used.

<Tabs defaultValue="js" className="pt-5 pb-1">
  <TabsList className="">
    <TabsTrigger value="js">layout.jsx</TabsTrigger>
    <TabsTrigger value="ts">layout.tsx</TabsTrigger>
  </TabsList>
  <TabsContent value="js">
  ```jsx {7} showLineNumbers
import ThemeProvider from './theme-provider'
 
export default function RootLayout({ children }) {
  return (
    <html>
      <body className="container">
        <ThemeProvider>{children}</ThemeProvider>
      </body>
    </html>
  )}
````
  </TabsContent>
  <TabsContent value="ts">
```tsx {11} showLineNumbers
import ThemeProvider from './theme-provider'
 
export default function RootLayout({
  children,
}: {
  children: React.ReactNode
}) {
  return (
    <html>
      <body className="container">
        <ThemeProvider>{children}</ThemeProvider>
      </body>
    </html>
  )
}
```
  </TabsContent>
</Tabs>

## Conclusion

Thank you for choosing the Documentation Template for your project. Whether you're documenting software, APIs, or processes, we're here to support you in creating clear and effective documentation. Happy documenting!
